svc-std.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: my-svc-std
spec:
  selector:
    app: std
  type: ClusterIP
  ports:
    - port: 80
