Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gold-std
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # Fix health check issue
    alb.ingress.kubernetes.io/healthcheck-path: /

    # Optional but useful
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /gold
            pathType: Prefix
            backend:
              service:
                name: my-svc-gold
                port:
                  number: 80

          - path: /std
            pathType: Prefix
            backend:
              service:
                name: my-svc-std
                port:
                  number: 80
